@@ -1,5 +1,6 @@
 4.43: 10/XX/2012 (svn rYYYY)
 	* CORE: Added QueryBuilder.countOf() shortcut to get the count of results from a query.
+	* CORE: Added Where.queryForFirst() and Where.countOf() methods as shortcut to QueryBuilder equivalents.
 
 4.42: 9/27/2012 (svn r2653)
 	* CORE: Added basic INNER and LEFT JOIN capabilities for queries only.  Finally.  Work in progress.
